# daisho

./: CMakeLists.txt  Changelog.txt  README.md  backport_candidates.txt  milestone1_todo.txt  third_party.txt
board/numato_opsis/: numato_opsis.cfg
board/numato_opsis/ise_project/: .gitignore
board/numato_opsis/ise_project/constraint/: pinout.ucf  timing.ucf
board/numato_opsis/ise_project/daisho_usb2_ecm/: daisho_usb2_ecm.tcl  daisho_usb2_ecm.xise
board/numato_opsis/ise_project/source/: sys_pll.vhd  top.vhd
core/: usb_descrip_gen.c
core/usb2/: usb2_crc.v  usb2_ep.v  usb2_ep0.v  usb2_packet.v  usb2_protocol.v  usb2_top.v  usb2_ulpi.v  usb_descrip.vh
core/usb3/: keep_me.txt
core_vhdl/usb2/: usb2_descrip_rom.vhd  usb2_ep0in_ram.vhd  usb2_ep_ram.vhd
test_reports/USBCV2_EHCI/milestone_1/: Chapter_9_Tests_-_Failed_-_2020-11-04_15-12-29_redacted.html  Chapter_9_Tests_-_Failed_-_2020-11-04_15-12-29_redacted.html.license
